force-app/main/default/objects/vlocity_ps__InventoryItem__c/vlocity_ps__InventoryItem__c.object-meta.xml
<CustomObject>
    <description>Represents items under the control of the public sector organization which can be provided or loaned to clients. Useful for tracking housing units such as apartments, rooms or beds. May be used to track other items for allocation to clients such as donated appliances, vehicles, clothing and blankets.</description>
    <label>Unit</label>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>