force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>