force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__AvailabilityDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AvailabilityDate__c</fullName>
    <label>Availability Date</label>
    <type>Date</type>
</CustomField>