force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__BillingAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BillingAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BillingAccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>