force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__ContactPersonId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactPersonId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventory Items (Contact Person)</relationshipLabel>
    <relationshipName>ContactPersonInventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>