force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__Cooling__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Cooling__c</fullName>
    <formula>TEXT(vlocity_ps__PremisesId__r.vlocity_ps__Cooling__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cooling</label>
    <type>Text</type>
</CustomField>