force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__CurrentResidentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CurrentResidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventory Item</relationshipLabel>
    <relationshipName>Inventory_Item</relationshipName>
    <type>Lookup</type>
</CustomField>