force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__ElevatorOrWalkup__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ElevatorOrWalkup__c</fullName>
    <label>Elevator or Walk-up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Floor</fullName>
            </value>
            <value>
                <fullName>Elevator</fullName>
            </value>
            <value>
                <fullName>Walk-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>