force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__Floor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Floor__c</fullName>
    <label>Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>