force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__Flooring__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Flooring__c</fullName>
    <label>Flooring</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardwood</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>