force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__HasBalcony__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HasBalcony__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony</label>
    <type>Checkbox</type>
</CustomField>