force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__IncludedAppliances__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncludedAppliances__c</fullName>
    <label>Included Appliances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oven</fullName>
            </value>
            <value>
                <fullName>Washer</fullName>
            </value>
            <value>
                <fullName>Dryer</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>