force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__IsFurnished__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsFurnished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>