force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__LastRemodelYear__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastRemodelYear__c</fullName>
    <label>Last Remodel Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>