force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LineNumber__c</fullName>
    <description>Line Number</description>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>