force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__NumberOfBedrooms__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NumberOfBedrooms__c</fullName>
    <label># Bedrooms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>