force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__ParkingIncluded__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParkingIncluded__c</fullName>
    <formula>vlocity_ps__PremisesId__r.vlocity_ps__IsParkingIncluded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Included</label>
    <type>Checkbox</type>
</CustomField>