force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>