force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__PremiseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremiseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Premise</label>
    <referenceTo>vlocity_ps__Premises__c</referenceTo>
    <relationshipName>InventoryItems1</relationshipName>
    <type>Lookup</type>
</CustomField>