force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__PremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises</label>
    <referenceTo>vlocity_ps__Premises__c</referenceTo>
    <relationshipLabel>Inventory Items1</relationshipLabel>
    <relationshipName>InventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>