force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__ProvisioningStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProvisioningStatus__c</fullName>
    <label>ProvisioningStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>