force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__PublishEnd__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PublishEnd__c</fullName>
    <label>Publish End</label>
    <type>Date</type>
</CustomField>