force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__PublishStart__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PublishStart__c</fullName>
    <label>Publish Start</label>
    <type>Date</type>
</CustomField>