force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__RentAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RentAmount__c</fullName>
    <label>Rent Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>