force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__SchoolDistrict__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SchoolDistrict__c</fullName>
    <formula>vlocity_ps__PremisesId__r.vlocity_ps__SchoolDistrict__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School District</label>
    <type>Text</type>
</CustomField>