force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SerialNumber__c</fullName>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>