force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__ServiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceAccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>