force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>InventoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>