force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__SocialHousingType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SocialHousingType__c</fullName>
    <label>Social Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>RGI subsidy</fullName>
            </value>
            <value>
                <fullName>Rent Supplement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>