force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StreetAddress__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>