force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__TotalRooms__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TotalRooms__c</fullName>
    <label>Total # Rooms</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>