force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UnitNumber__c</fullName>
    <label>Unit #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>