force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__Utilities__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Utilities__c</fullName>
    <label>Utilities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Tenant Pays</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>