force-app/main/default/objects/vlocity_ps__InventoryItem__c/fields/vlocity_ps__VideoTourURL__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__VideoTourURL__c</fullName>
    <label>Video Tour URL</label>
    <type>Url</type>
</CustomField>