force-app/main/default/objects/vlocity_ps__InventoryItem__c/recordTypes/Foster_Home.recordType-meta.xml
<RecordType>
    <fullName>Foster_Home</fullName>
    <active>true</active>
    <label>Foster Home</label>
</RecordType>