force-app/main/default/objects/vlocity_ps__InventoryItem__c/validationRules/vlocity_ps__PublishDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__PublishDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__PublishStart__c &gt; vlocity_ps__PublishEnd__c</errorConditionFormula>
    <errorDisplayField>vlocity_ps__PublishStart__c</errorDisplayField>
    <errorMessage>Publish Start Date cannot be greater than Publish End Date</errorMessage>
</ValidationRule>